# pdelab-mesh-generator

./: .gitignore
doc/: README.Changes_release_1.0.1
dune/pdelab/: CMakeLists.txt
dune/pdelab/backend/eigen/: solvers.hh
dune/pdelab/common/: functionwrappers.hh
dune/pdelab/finiteelement/: qkdglagrange.hh
dune/pdelab/finiteelementmap/: monomfem.hh  p0fem.hh
dune/pdelab/gridfunctionspace/: gridfunctionspaceutilities.hh
dune/pdelab/gridoperator/: gridoperator.hh
dune/pdelab/localoperator/: callswitch.hh  numericaljacobian.hh  numericaljacobianapply.hh  numericalresidual.hh
dune/pdelab/residualcoupling/: CMakeLists.txt
dune/pdelab/residualcoupling/gridoperator/common/: CMakeLists.txt  assembler_rcoupling.hh  assemblerutilities_rcoupling.hh  gridoperatorutilities_coupling_rcoupling.hh  localassemblerenginebase_rcoupling.hh
dune/pdelab/residualcoupling/gridoperator/default/: CMakeLists.txt  assemblerSl_rcoupling.hh  assembler_normal_rcoupling.hh  assembler_rcoupling.hh  jacobianapplyengine_rcoupling.hh  jacobianengine_normal_rcoupling.hh  jacobianengine_rcoupling.hh  jacobianengine_slave_rcoupling.hh  localassembler_normal_rcoupling.hh  localassembler_rcoupling.hh  localassembler_slave_rcoupling.hh  patternengine_coupling_rcoupling.hh  patternengine_normal_rcoupling.hh  patternengine_rcoupling.hh  residualengine_coupling_rcoupling.hh  residualengine_normal_rcoupling.hh
dune/pdelab/test/: gridexamples.hh  testanalytic.cc  testconstraints.cc  testgridfunctionspace.cc  testinterpolate.cc  testpk.cc  testpoisson.cc  testrt0.cc  testutilities.cc
(+39 files in other folders)
