install(FILES    assembler_rcoupling.hh
        jacobianengine_slave_rcoupling.hh
        localassembler_rcoupling.hh
        localassembler_slave_rcoupling.hh
        patternengine_rcoupling.hh
        prestageengine_rcoupling.hh
        residualengine_coupling_rcoupling.hh
        residualengine_rcoupling.hh
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/pdelab/residualcoupling/gridoperator/default)
